Trying to add PWA

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "theme_color": "#8257e5",
-    "background_color": "#fff",
+    "theme_color": "#9f75ff",
+    "background_color": "#9f75ff",
     "display": "fullscreen",
     "scope": "/",
     "start_url": "/",
